install (DIRECTORY codemirror/lib DESTINATION share/yagy/resources/codemirror)
install (DIRECTORY codemirror/mode/yacas DESTINATION share/yagy/resources/codemirror/mode)
install (DIRECTORY codemirror/addon/edit DESTINATION share/yagy/resources/codemirror/addon)
install (DIRECTORY codemirror/addon/hint DESTINATION share/yagy/resources/codemirror/addon)
install (FILES flot/jquery.flot.min.js flot/jquery.flot.resize.min.js DESTINATION share/yagy/resources/flot)
install (DIRECTORY fonts/HTML-CSS/STIX-Web/otf DESTINATION share/yagy/resources/fonts/HTML-CSS/STIX-Web)
install (DIRECTORY fonts/HTML-CSS/STIX-Web/woff DESTINATION share/yagy/resources/fonts/HTML-CSS/STIX-Web)
install (DIRECTORY fonts/HTML-CSS/TeX/otf DESTINATION share/yagy/resources/fonts/HTML-CSS/TeX)
install (DIRECTORY img DESTINATION share/yagy/resources)
install (DIRECTORY jquery DESTINATION share/yagy/resources)
install (DIRECTORY mathbar DESTINATION share/yagy/resources)
install (DIRECTORY mathjax DESTINATION share/yagy/resources)
install (FILES plot3d/plot3d.js plot3d/delaunay.js DESTINATION share/yagy/resources/plot3d)
install (FILES three/three.min.js three/Detector.js three/TrackballControls.js DESTINATION share/yagy/resources/three)
install (FILES vis/vis.min.css vis/vis.min.js DESTINATION share/yagy/resources/vis)
install (DIRECTORY yagy_ui DESTINATION share/yagy/resources)
install (FILES yagy_ui.html DESTINATION share/yagy/resources)
